@@ -22,7 +22,8 @@ plot(echosounder, which=2, drawBottom=TRUE, atTop=pretty(echosounder[["time"]]))
 
 \usage{data(echosounder)}
 
-\source{This file came from the SLEIWEX-2008 experiment.}
+\source{This file came from the SLEIWEX-2008 experiment, and was decimated
+    using \code{\link{decimate}} with \code{by=c()}.}
 
 \seealso{The documentation for \code{\link{echosounder-class}} explains the
     structure of \code{echosounder} objects, and also outlines the other
