@@ -16,7 +16,7 @@
      type="l", col=oce.colorsJet, lwd=2,
      despike=FALSE,
      drawBottom, ignore=5,
-     drawTimeRange=FALSE,
+     drawTimeRange=FALSE, drawPalette=TRUE,
      radius, coastline,
      adorn=NULL,
      mgp=getOption("oceMgp"),
@@ -97,6 +97,8 @@
 
   \item{drawTimeRange}{if \code{TRUE}, the time range will be drawn at the top.
       Ignored except for \code{which=2}, i.e. distance-depth plots.}
+
+  \item{drawPalette}{if \code{TRUE}, the palette will be drawn.}
  
   \item{radius}{radius to use for maps; ignored unless \code{which=3} or
       \code{which="map"}.}
